--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "prettier": "^3.5.3",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
