--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
+    "@vercel/react-router": "^1.1.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "isbot": "^5.1.17",
