--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
-    "@vercel/react-router": "^1.1.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.3.0"
+    "react-router": "^7.3.0",
+    "vite-plugin-vercel": "^9.0.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.3.0",
