--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.3.0",
-    "vite-plugin-vercel": "^9.0.5"
+    "react-router": "^7.3.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.3.0",
