--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "build": "react-router build",
         "dev": "react-router dev",
         "start": "react-router-serve ./build/server/index.js",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "typecheck": "react-router typegen && tsc"
     },
     "dependencies": {
@@ -22,14 +25,20 @@
     "devDependencies": {
         "@react-router/dev": "^7.3.0",
         "@tailwindcss/vite": "^4.0.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
         "@types/node": "^20",
         "@types/react": "^19.0.1",
         "@types/react-dom": "^19.0.1",
+        "@vitejs/plugin-react": "^4.3.4",
+        "happy-dom": "^17.4.4",
+        "jsdom": "^26.0.0",
         "prettier": "^3.5.3",
         "react-router-devtools": "^1.1.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.7.2",
         "vite": "^5.4.11",
-        "vite-tsconfig-paths": "^5.1.4"
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^3.0.8"
     }
 }
